feat(init) : Add init endpoint
