# pkg/models/app.go
@@ -1,5 +1,7 @@
 package models
 
+import "github.com/google/uuid"
+
 // App is the model struct for apps
 // swagger:model App
 type App struct {
@@ -10,4 +12,20 @@ type App struct {
 	NumOfCurrentInstalls  *int       `json:"numOfCurrentInstalls,omitempty"`
 	NumOfAppLaunches      *int       `json:"numOfAppLaunches,omitempty"`
 	DeployedVersions      *[]Version `json:"deployedVersions,omitempty"`
+	DeletedAt             string     `json:"deletedAt,omitempty"`
+}
+
+func NewAppByDevice(sdkInfo *Device) *App {
+	app := new(App)
+	app.ID = uuid.New().String()
+	app.AppID = sdkInfo.AppID
+	app.AppName = sdkInfo.AppName
+	return app
+}
+func NewApp(appId, name string) *App {
+	app := new(App)
+	app.ID = uuid.New().String()
+	app.AppID = appId
+	app.AppName = name
+	return app
 }
