# pkg/models/device.go
@@ -5,7 +5,10 @@ package models
 type Device struct {
 	ID            string `json:"id"`
 	VersionID     string `json:"versionId"`
+	Version       string `json:"version"`
+	AppID         string `json:"appId"`
 	DeviceID      string `json:"deviceId"`
 	DeviceVersion string `json:"deviceVersion"`
 	DeviceType    string `json:"deviceType"`
+	AppName       string `json:"appName,omitempty"`
 }
