# pkg/models/version.go
@@ -1,5 +1,7 @@
 package models
 
+import "github.com/google/uuid"
+
 // Version model
 // swagger:model Version
 type Version struct {
@@ -11,4 +13,13 @@ type Version struct {
 	NumOfCurrentInstalls int64    `json:"numOfCurrentInstalls"`
 	NumOfAppLaunches     int64    `json:"numOfAppLaunches"`
 	Devices              []Device `json:"devices,omitempty"`
+	LastLaunchedAt       string   `json:"lastLaunchedAt,omitempty"`
+}
+
+func NewVersionByDevice(sdkInfo *Device) *Version {
+	ver := new(Version)
+	ver.ID = uuid.New().String()
+	ver.Version = sdkInfo.Version
+	ver.AppID = sdkInfo.AppID
+	return ver
 }
